# openvino

./: .gitignore  CMakeLists.txt  main.cpp  test.cpp
openvino/: CMakeLists.txt
openvino/include/: openvino.hpp
openvino/src/: openvino.cpp
